--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   
   <main class="container">
-    <header>
-      <h1>A Playground for JavaScript</h1>
+    <header class=" white red">
+      <h1 aria-live="polite">A Playground for JavaScript</h1>
       <p class="big purple">Check the developer console!</p>
     </header>
 
@@ -37,6 +37,6 @@
   </main>
 
   <!-- load script files -->
-  <script src="js/script.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
